--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -4,6 +4,14 @@
 @attribute [Authorize]
 
 <h3 class="card-title">Car Customers</h3>
+<br />
+
+<a href="/customers/create" class="btn btn-secondary">
+	<span class="oi oi-plus"></span>
+	Create New Customer
+</a>
+<br />
+<br />
 
 @if (Customers == null)
 {
