--- a/CarRentalManagement/Client/Pages/Makes/Index.razor
+++ b/CarRentalManagement/Client/Pages/Makes/Index.razor
@@ -4,6 +4,14 @@
 @attribute [Authorize]
 
 <h3 class="card-title">Car Makes</h3>
+<br />
+
+<a href="/makes/create" class="btn btn-secondary">
+	<span class="oi oi-plus"></span>
+	Create New Make
+</a>
+<br />
+<br />
 
 @if (Makes == null)
 {
