--- a/CarRentalManagement/Client/_Imports.razor
+++ b/CarRentalManagement/Client/_Imports.razor
@@ -12,5 +12,6 @@
 @using CarRentalManagement.Client.Components
 @using CarRentalManagement.Client.Static
 @using CarRentalManagement.Shared.Domain
+@using CarRentalManagement.Client.Services
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
